--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
     <h1>LambdaSC Interpreter</h1>
       <p>This is a simple interpreter of 𝝺<sub>sc</sub>, a calculus for scoped effects & handlers.</p>
       <p>For more information about 𝝺<sub>sc</sub>, please refer to the paper (url to be added).</p>
+      <p>For the implementation of the interpreter, please refer to the <a href="https://github.com/thwfhk/lambdaSC">GitHub repository</a>.</p>
     <!-- <p style="color:red">NOTE: The interpreter does not support recursive functions currently.</p> -->
     <div class="sample-toolbar">
       <button id = "run">RUN</button>
