update w.r.t. the main branch

--- a/LambdaSC.html
+++ b/LambdaSC.html
@@ -1,10 +1,10 @@
 <!doctype html>
 <html lang="en">
 <head>
-<title>LambdaSC</title>
+<title>lambdaSC</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 </head>
 <body>
-<script src="LambdaSC.js"></script>
+<script src="lambdaSC.js"></script>
 </body>
 </html>
