--- a/index.html
+++ b/index.html
@@ -59,40 +59,20 @@
     <div class="sample-toolbar">
       <button id = "run">RUN</button>
       Examples:
-      <button id = "nd">Non-Determinism</button>
+      <button id = "intro">Intro</button>
       <button id = "once">Once</button>
       <button id = "cut">Cut</button>
       <button id = "catch">Exception</button>
       <button id = "local">State</button>
       <button id = "depth">Depth-Bounded Search</button>
+      <button id = "parser">Parser</button>
     </div>
   
     <textarea class="editor" id="editor" rows="25">
--- define a handler for non-determinism using the keyword DEF
--- write the type annotation of handlers in the brackets
+-- Click on the buttons above to select pre-defined examples.
+-- Click on the RUN button to run the interpreter.
 
-DEF hND = handler [\ x . List x]
-  { return x      |-> return [x]
-  , op fail _ _   |-> return []
-  , op choose _ k |-> do xs <- k true; do ys <- k false ; xs ++ ys
-  , fwd f p k     |-> f (p, \ z . concatMap z k)
-  }
-
-
--- apply the handler to a computation using the keyword RUN
-
-RUN hND # op choose unit (b . if b then return "heads" else return "tails")
-
-
--- or directly write the definition of the handler in the computation
--- instead of defining first
-
-RUN handler [\ x . List x]
-  { return x      |-> return [x]
-  , op fail _ _   |-> return []
-  , op choose _ k |-> do xs <- k true; do ys <- k false ; xs ++ ys
-  , fwd f p k |-> f (p, \ z . concatMap z k)
-  } # op choose unit (b . if b then return "heads" else return "tails")
+RUN return "Hello, world!"
     </textarea>
 
     <pre id = "output">
